--- a/Tasks/Task2/style.css
+++ b/Tasks/Task2/style.css
@@ -1,157 +1,117 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
-*{
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: 'Poppins', sans-serif;
+body
+{
+	margin: 0;
+	padding: 0;
+	font-family: sans-serif;
+	/*background: #000;*/
 }
-body{
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  min-height: 100vh;
-  background: linear-gradient(#FED151, #DE981F);
+.container
+{
+	width: 100%;
+	height: 100vh;
+	overflow: hidden;
 }
-.wrapper{
-  background: #f6f6f6;
-  max-width: 360px;
-  width: 100%;
-  border-radius: 10px;
-  box-shadow: 0px 10px 15px rgba(0,0,0,0.1);
+.container .column
+{
+	width: 25%;
+	height: 100%;
+	float: left;
+	border-right: 2px solid rgba(0,0,0,.5);
+	box-sizing: border-box;
+	z-index: 1;
 }
-.wrapper .content{
-  padding: 30px;
-  display: flex;
-  align-items: center;
-  flex-direction: column;
+.container .column:last-child
+{
+	border-right: none;
 }
-.wrapper .outer{
-  height: 135px;
-  width: 135px;
-  overflow: hidden;
+.container .column .content
+{
+	position: relative;
+	height: 100%;
 }
-.outer .emojis{
-  height: 500%;
-  display: flex;
-  flex-direction: column;
+.container .column .content h1
+{
+	position: absolute;
+	top: 50%;
+	transform: translateY(-50%);
+	width: 100%;
+	background: rgba(0,0,0,.1);
+	text-align: center;
+	margin: 0;
+	padding: 0;
+	color: rgba(255,255,255,.2);
+	font-size: 15em;
+	border-top: 2px solid rgba(0,0,0,.5);
+	border-bottom: 2px solid rgba(0,0,0,.5);
 }
-.outer .emojis li{
-  height: 20%;
-  width: 100%;
-  list-style: none;
-  transition: all 0.3s ease;
+.container .column .content .box
+{
+	position: absolute;
+	top: 50%;
+	transform: translateY(100%);
+	box-sizing: border-box;
+	padding: 40px;
+	background: rgba(255,255,255,1);
+	text-align: center;
+	transition: 0.5s;
+	opacity: 0;
 }
-.outer li img{
-  height: 100%;
-  width: 100%;
+.container .column.active .content .box
+{
+	opacity: 1;
+	transform: translateY(-50%);
 }
-#star-2:checked ~ .content .emojis .slideImg{
-  margin-top: -135px;
+.container .column .content .box h2
+{
+	margin: 0;
+	padding: 0;
+	font-size: 30px;
+	color: #262626;
 }
-#star-3:checked ~ .content .emojis .slideImg{
-  margin-top: -270px;
+.container .column .content .box p
+{
+	color: #262626;
+	font-size: 18px;
 }
-#star-4:checked ~ .content .emojis .slideImg{
-  margin-top: -405px;
+.container .column .bg
+{
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	pointer-events: none;
+	z-index: -1;
 }
-#star-5:checked ~ .content .emojis .slideImg{
-  margin-top: -540px;
+.container .column.active .bg.bg1
+{
+	background: url(bg1.jpg);
+	background-size: cover;
+	background-attachment: fixed;
+	background-position: center;
+	transition: 0.5s
 }
-.wrapper .stars{
-  margin-top: 30px;
+.container .column.active .bg.bg2
+{
+	background: url(bg2.jpg);
+	background-size: cover;
+	background-attachment: fixed;
+	background-position: center;
+	transition: 0.5s
 }
-.stars label{
-  font-size: 30px;
-  margin: 0 3px;
-  color: #ccc;
+.container .column.active .bg.bg3
+{
+	background: url(bg3.jpg);
+	background-size: cover;
+	background-attachment: fixed;
+	background-position: center;
+	transition: 0.5s
 }
-#star-1:hover ~ .content .stars .star-1,
-#star-1:checked ~ .content .stars .star-1,
-
-#star-2:hover ~ .content .stars .star-1,
-#star-2:hover ~ .content .stars .star-2,
-#star-2:checked ~ .content .stars .star-1,
-#star-2:checked ~ .content .stars .star-2,
-
-#star-3:hover ~ .content .stars .star-1,
-#star-3:hover ~ .content .stars .star-2,
-#star-3:hover ~ .content .stars .star-3,
-#star-3:checked ~ .content .stars .star-1,
-#star-3:checked ~ .content .stars .star-2,
-#star-3:checked ~ .content .stars .star-3,
-
-#star-4:hover ~ .content .stars .star-1,
-#star-4:hover ~ .content .stars .star-2,
-#star-4:hover ~ .content .stars .star-3,
-#star-4:hover ~ .content .stars .star-4,
-#star-4:checked ~ .content .stars .star-1,
-#star-4:checked ~ .content .stars .star-2,
-#star-4:checked ~ .content .stars .star-3,
-#star-4:checked ~ .content .stars .star-4,
-
-#star-5:hover ~ .content .stars .star-1,
-#star-5:hover ~ .content .stars .star-2,
-#star-5:hover ~ .content .stars .star-3,
-#star-5:hover ~ .content .stars .star-4,
-#star-5:hover ~ .content .stars .star-5,
-#star-5:checked ~ .content .stars .star-1,
-#star-5:checked ~ .content .stars .star-2,
-#star-5:checked ~ .content .stars .star-3,
-#star-5:checked ~ .content .stars .star-4,
-#star-5:checked ~ .content .stars .star-5{
-  color: #fd4;
-}
-.wrapper .footer{
-  border-top: 1px solid #ccc;
-  background: #f2f2f2;
-  width: 100%;
-  height: 55px;
-  padding: 0 20px;
-  border-radius: 0 0 10px 10px;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-.footer span{
-  font-size: 17px;
-  font-weight: 400;
-}
-.footer .text::before{
-  content: "Rate your experience";
-}
-.footer .numb::before{
-  content: "0 out of 5";
-}
-#star-1:checked ~ .footer .text::before{
-  content: "I will be sad";
-}
-#star-1:checked ~ .footer .numb::before{
-  content: "1 out of 5";
-}
-#star-2:checked ~ .footer .text::before{
-  content: "I don't like it";
-}
-#star-2:checked ~ .footer .numb::before{
-  content: "2 out of 5";
-}
-#star-3:checked ~ .footer .text::before{
-  content: "This is awesome";
-}
-#star-3:checked ~ .footer .numb::before{
-  content: "3 out of 5";
-}
-#star-4:checked ~ .footer .text::before{
-  content: "I just like it";
-}
-#star-4:checked ~ .footer .numb::before{
-  content: "4 out of 5";
-}
-#star-5:checked ~ .footer .text::before{
-  content: "I just love it";
-}
-#star-5:checked ~ .footer .numb::before{
-  content: "5 out of 5";
-}
-input[type="radio"]{
-  display: none;
+.container .column.active .bg.bg4
+{
+	background: url(bg4.jpg);
+	background-size: cover;
+	background-attachment: fixed;
+	background-position: center;
+	transition: 0.5s
 }
