--- a/Tasks/Task3/css/style.css
+++ b/Tasks/Task3/css/style.css
@@ -25,6 +25,7 @@ p{
   top: 63px;
   position: absolute;
   text-shadow: 4px 0px #fff;
+  animation: title 1.5s linear infinite;
 
 }
 
@@ -174,4 +175,23 @@ transform: rotate(42deg);
     transform: translateY(-300px) scaleX(10);
   }
   
+}
+
+@keyframes title {
+
+  0%{
+
+    transform: translateY(0);
+  }
+
+  50%{
+
+    transform: translateY(10px);
+
+  }
+
+  100%{
+    transform: translateY(0)  scale(1);
+
+  }
 }
