--- a/Tasks/Task2/style.css
+++ b/Tasks/Task2/style.css
@@ -3,7 +3,6 @@ body
 	margin: 0;
 	padding: 0;
 	font-family: sans-serif;
-	/*background: #000;*/
 }
 .container
 {
@@ -13,7 +12,7 @@ body
 }
 .container .column
 {
-	width: 20%;
+	width: 16.6%;
 	height: 100%;
 	float: left;
 	border-right: 2px solid rgba(0,0,0,.5);
@@ -85,7 +84,7 @@ body
 }
 .container .column.active .bg.bg1
 {
-	background: url('./imgs/img-3');
+	background: url('./imgs/7.jpg');
 	background-size: cover;
 	background-attachment: fixed;
 	background-position: center;
@@ -93,7 +92,7 @@ body
 }
 .container .column.active .bg.bg2
 {
-	background: url('./imgs/img-2');
+	background: url('./imgs/2.jpg');
 	background-size: cover;
 	background-attachment: fixed;
 	background-position: center;
@@ -101,7 +100,7 @@ body
 }
 .container .column.active .bg.bg3
 {
-	background: url('./imgs/img-1');
+	background: url('./imgs/3.jpg');
 	background-size: cover;
 	background-attachment: fixed;
 	background-position: center;
@@ -109,7 +108,7 @@ body
 }
 .container .column.active .bg.bg4
 {
-	background: url('./imgs/img-4');
+	background: url('./imgs/5.jpg');
 	background-size: cover;
 	background-attachment: fixed;
 	background-position: center;
@@ -119,9 +118,19 @@ body
 
 .container .column.active .bg.bg5
 {
-	background: url('./imgs/img-5');
+	background: url('./imgs/6.jpg');
 	background-size: cover;
 	background-attachment: fixed;
 	background-position: center;
 	transition: 0.5s
 }
+
+.container .column.active .bg.bg6
+{
+	background: url('./imgs/1.jpg');
+	background-size: cover;
+	background-attachment: fixed;
+	background-position: center;
+	transition: 0.5s
+}
+
